fix display being too narrow

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -28,6 +28,9 @@ body
   user-select: none
   -webkit-user-select: none
 
+  #__nuxt
+    width: 100%
+
 div
   display: flex
   flex-direction: column
